<resources>
    <string name="app_name">SklepBT</string>
    <string name="add_product">Dodaj produkt</string>
    <string name="udost_pnij">Udostępnij</string>
    <string name="wy_lij_sms">Wyślij sms</string>
    <string name="lista_zam_wie">Lista zamówień</string>
    <string name="moje_konto">Moje Konto</string>
    <string name="zmie_j_zyk">Zmień język</string>
    <string name="o_programie">O programie</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="product_name">Nazwa produktu</string>
    <string name="product_description">Opis produktu</string>
    <string name="product_price">Cena produktu</string>
    <string name="choose_image">Wybierz zdjęcie</string>
    <string name="add_product_admin">Dodaj produkt</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="log_in">Zaloguj się</string>
    <string name="register">Zarejestruj się</string>
    <string name="imi_i_nazwisko_nazwa_firmy">Imię i nazwisko / Nazwa firmy</string>
    <string name="email">Email</string>
    <string name="zam_w">Zamów</string>
    <string name="sklep">Sklep</string>
    <string name="koszyk_0">Koszyk: 0</string>
    <string name="change_photo">Zmień zdjęcie</string>
    <string name="change_email">Zmień email</string>
    <string name="change_password">Zmień hasło</string>
    <string name="save_changes">Zapisz zmiany</string>
    <string name="password_register">Hasło</string>
    <string name="register_button">Zarejestruj się</string>
    <string name="email_register">Email</string>
    <string name="username_register">Nazwa użytkownika</string>
    <string name="quantity_order">Ilość: %1$d</string>
    <string name="price_order">Cena: %1$.2f PLN</string>
    <string name="about">O programie</string>
    <string name="autor">Autor: %1$s</string>
    <string name="cart">Koszyk: %1$d</string>
    <string name="total_price">Razem: %.2f PLN</string>
    <string name="order_number">Zamówienie #%d</string>
    <string name="order_date">Data: %s</string>
    <string name="order_total">Razem: %.2f PLN</string>
    <string name="product_quantity">x%d</string>
    <string name="product_total_price">%.2f PLN</string>
</resources>