<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AddProduct">

    <EditText
        android:id="@+id/product_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/product_description_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_description"
        android:inputType="textMultiLine"
        android:minLines="3"
        app:layout_constraintTop_toBottomOf="@id/product_name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/product_price_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/product_price"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/product_description_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        app:layout_constraintTop_toBottomOf="@id/product_price_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/product_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/btn_choose_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/btn_add_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_product_admin"
        app:layout_constraintTop_toBottomOf="@id/product_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>